@@ -28,6 +28,9 @@ HOW TO UPDATE?
 
 Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.7.x
 
+New Commands:
+- get_hovered_item:   returns the currently hovered item by the mouse
+
 New Keywords:
 - add_input_text:               Added "tab_input" keyword
 
